--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "portfolio2",
+  "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,17 +13,17 @@
     "@react-three/drei": "^9.120.6",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@sentry/nextjs": "^8",
-    "@types/react-lottie": "^1.2.10",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.0",
+    "lottie-react": "^2.4.1",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.1.1",
+    "next": "^16.1.1",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.12",
     "qss": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
-    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
@@ -32,11 +32,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
